--- a/flask-app/requirements.txt
+++ b/flask-app/requirements.txt
@@ -3,4 +3,5 @@ Flask-WTF==1.2.1
 openai==1.4.0
 requests==2.31.0
 pyzbar[scripts]==0.1.9
-opencv-python==4.8.1.78
+numpy==1.26.1
+opencv-python-headless
